Revision history for Perl extension PGXN::API

0.2.0
      - No longer serve directory indexes.
      - Added tests for the router.
      - Serve distribution files with content-type application/zip.

0.1.0   2011-03-02 23:58:41
      - Initial version.
      - Syncs to mirror.
      - Merges metadata to API doc root.
      - Has PSGI to serve static files from the doc root.