@@ -1,8 +1,0 @@
-<html>
-  <head>
-    <title>This is a test, yo</title>
-  </head>
-  <body>
-    <h1>Test HTML file</h1>
-  </body>
-</html>
