@@ -1,0 +1,16 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <title>PostgreSQL Extension Network API</title>
+  </head>
+  <body>
+    <h1>PostgreSQL Extension Network API</h1>
+    <p>This is the PGXN API server. You probably
+    want <a href="http://www.pgxn.org/">PGXN</a>. Or if you want to upload a
+    distribution to PGXN, use <a href="http://manager.pgxn.org/">PGXN
+    Manager</a>. Eventually this page will point to the PGXN API
+    documentation, but for the moment, it hasn't been written yet. Please come
+    again!</p>
+  </body>
+</html>
